tests/ui/attributes/used-issue-126789.stderr
error: attribute must be applied to a `static` variable
  --> $DIR/used-issue-126789.rs:2:5
   |
LL |     #[used]
   |     ^^^^^^^
LL |     static FOO: i32;
   |     ---------------- but this is a foreign static item

error: aborting due to 1 previous error

